unpackaged/main/default/objects/Case/fields/Actions_Taken__c.field-meta.xml
<CustomField>
    <fullName>Actions_Taken__c</fullName>
    <description>Actions taken in response to incident</description>
    <label>Actions Taken</label>
    <length>65536</length>
    <type>LongTextArea</type>
</CustomField>