unpackaged/main/default/objects/Case/fields/AirCall_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>AirCall_Phone_Number__c</fullName>
    <label>AirCall Phone Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>