unpackaged/main/default/objects/Case/fields/AirCall_Preference__c.field-meta.xml
<CustomField>
    <fullName>AirCall_Preference__c</fullName>
    <inlineHelpText>Input details of where the AirCall number should be based out of.  If nothing is provided the default will be Portland, OR.</inlineHelpText>
    <label>AirCall Preference</label>
    <type>TextArea</type>
</CustomField>