unpackaged/main/default/objects/Case/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <label>Answer</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>