unpackaged/main/default/objects/Case/fields/As_a__c.field-meta.xml
<CustomField>
    <fullName>As_a__c</fullName>
    <label>As a</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>