unpackaged/main/default/objects/Case/fields/Case_Programs__c.field-meta.xml
<CustomField>
    <fullName>Case_Programs__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cases (Case)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>