unpackaged/main/default/objects/Case/fields/Cohort_Added__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Added__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <label>Cohort Added</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>