unpackaged/main/default/objects/Case/fields/Created_By_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Current_User__c</fullName>
    <description>Field created to use in list views to display &quot;Cases I Created&quot;</description>
    <formula>CreatedById =  $User.Id</formula>
    <label>Created By Current User</label>
    <type>Checkbox</type>
</CustomField>