unpackaged/main/default/objects/Case/fields/Date_Incident_Reported_to_Verto__c.field-meta.xml
<CustomField>
    <fullName>Date_Incident_Reported_to_Verto__c</fullName>
    <label>Date Incident Reported to Verto</label>
    <type>Date</type>
</CustomField>