unpackaged/main/default/objects/Case/fields/Deposit_Made__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Made__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <label>Deposit Made</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>