unpackaged/main/default/objects/Case/fields/Disciplinary_Actions_Needed__c.field-meta.xml
<CustomField>
    <fullName>Disciplinary_Actions_Needed__c</fullName>
    <label>Disciplinary Actions Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>