unpackaged/main/default/objects/Case/fields/Emergency_Contact_Names__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Names__c</fullName>
    <label>Emergency Contact Names</label>
    <length>100</length>
    <type>Text</type>
</CustomField>