unpackaged/main/default/objects/Case/fields/Emergency_Contact_Notes__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Notes__c</fullName>
    <label>Emergency Contact Notes</label>
    <length>65536</length>
    <type>LongTextArea</type>
</CustomField>