unpackaged/main/default/objects/Case/fields/Emergency_Contacts_Notified__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contacts_Notified__c</fullName>
    <label>Emergency Contacts Notified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes - by Verto staff</fullName>
            </value>
            <value>
                <fullName>Yes - by local partner</fullName>
            </value>
            <value>
                <fullName>Yes - by student</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>