unpackaged/main/default/objects/Case/fields/Enrollment_Record__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrollment Record #</label>
    <referenceTo>Enrollment_Record__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>