unpackaged/main/default/objects/Case/fields/Escalate_to_Revenue_Operations__c.field-meta.xml
<CustomField>
    <fullName>Escalate_to_Revenue_Operations__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <label>Escalate to Revenue Operations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>