unpackaged/main/default/objects/Case/fields/Follow_up_Required__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Required__c</fullName>
    <label>Follow up Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>