unpackaged/main/default/objects/Case/fields/Full_Description__c.field-meta.xml
<CustomField>
    <fullName>Full_Description__c</fullName>
    <description>Description of incident</description>
    <label>Full Description</label>
    <length>65536</length>
    <type>LongTextArea</type>
</CustomField>