unpackaged/main/default/objects/Case/fields/I_want__c.field-meta.xml
<CustomField>
    <fullName>I_want__c</fullName>
    <label>I want</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>