unpackaged/main/default/objects/Case/fields/Is_Master_Case__c.field-meta.xml
<CustomField>
    <fullName>Is_Master_Case__c</fullName>
    <label>Is Master Case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>