unpackaged/main/default/objects/Case/fields/Location_Case__c.field-meta.xml
<CustomField>
    <fullName>Location_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>