unpackaged/main/default/objects/Case/fields/Medical_Cost_Covered__c.field-meta.xml
<CustomField>
    <fullName>Medical_Cost_Covered__c</fullName>
    <label>Medical Cost Covered?</label>
    <length>20</length>
    <type>Text</type>
</CustomField>