unpackaged/main/default/objects/Case/fields/Medical_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Medical_Treatment__c</fullName>
    <description>Medical treatment received? Where administered?</description>
    <label>Medical Treatment</label>
    <length>65536</length>
    <type>LongTextArea</type>
</CustomField>