unpackaged/main/default/objects/Case/fields/New_Hire_Email_Addresses__c.field-meta.xml
<CustomField>
    <fullName>New_Hire_Email_Addresses__c</fullName>
    <inlineHelpText>Input all the full email address for each new hire in the request.  Separate each with a semicolon (;).</inlineHelpText>
    <label>New Hire Email Addresses</label>
    <type>TextArea</type>
</CustomField>