unpackaged/main/default/objects/Case/fields/New_Hire_Names__c.field-meta.xml
<CustomField>
    <fullName>New_Hire_Names__c</fullName>
    <inlineHelpText>Input all the names in the new hire request.  Separate with a semicolon (;).</inlineHelpText>
    <label>New Hire Names</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>