unpackaged/main/default/objects/Case/fields/New_Hire_Role__c.field-meta.xml
<CustomField>
    <fullName>New_Hire_Role__c</fullName>
    <label>New Hire Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admissions: Leadership</fullName>
            </value>
            <value>
                <fullName>Admissions: Sr. Admissions</fullName>
            </value>
            <value>
                <fullName>Admissions: Tier 1</fullName>
            </value>
            <value>
                <fullName>Admissions: Tier 2</fullName>
            </value>
            <value>
                <fullName>College Planning</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Student Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>