unpackaged/main/default/objects/Case/fields/New_or_Update_Form__c.field-meta.xml
<CustomField>
    <fullName>New_or_Update_Form__c</fullName>
    <label>New or Update Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Form Needed</fullName>
            </value>
            <value>
                <fullName>Update an Existing Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>