unpackaged/main/default/objects/Case/fields/Number_of_New_Hires__c.field-meta.xml
<CustomField>
    <fullName>Number_of_New_Hires__c</fullName>
    <label>Number of New Hires</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>