unpackaged/main/default/objects/Case/fields/Person_Involved__c.field-meta.xml
<CustomField>
    <fullName>Person_Involved__c</fullName>
    <label>Person Involved</label>
    <length>255</length>
    <type>Text</type>
</CustomField>