unpackaged/main/default/objects/Case/fields/Primary_ROI_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_ROI_Type__c</fullName>
    <label>Primary ROI Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cost Savings</fullName>
            </value>
            <value>
                <fullName>Revenue Generating</fullName>
            </value>
            <value>
                <fullName>Time Savings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>