unpackaged/main/default/objects/Case/fields/Related_Master_Case__c.field-meta.xml
<CustomField>
    <fullName>Related_Master_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Master Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Related Issues</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>