unpackaged/main/default/objects/Case/fields/Related_to_Specific_Record__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Specific_Record__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <label>Related to Specific Record</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>