unpackaged/main/default/objects/Case/fields/Requested_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Go_Live_Date__c</fullName>
    <description>This field is part of the Revenue Ops Case Flow for Upcoming Sprint Request fields.</description>
    <label>Requested Go Live Date</label>
    <type>Date</type>
</CustomField>