unpackaged/main/default/objects/Case/fields/Revenue_Ops_Case_Topic__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Ops_Case_Topic__c</fullName>
    <label>Revenue Ops Case Topic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Question</fullName>
            </value>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Feature Request</fullName>
            </value>
            <value>
                <fullName>Upcoming Sprint Request</fullName>
            </value>
            <value>
                <fullName>New Hire Request</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Technology Idea/Request</fullName>
                <isActive>false</isActive>
                <label>Technology Idea/Request</label>
            </value>
            <value>
                <fullName>Technology Issue</fullName>
                <isActive>false</isActive>
                <label>Technology Issue</label>
            </value>
            <value>
                <fullName>Technology Question</fullName>
                <isActive>false</isActive>
                <label>Technology Question</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>