unpackaged/main/default/objects/Case/fields/ROI_Explanation__c.field-meta.xml
<CustomField>
    <fullName>ROI_Explanation__c</fullName>
    <label>ROI Explanation</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>