unpackaged/main/default/objects/Case/fields/Semester__c.field-meta.xml
<CustomField>
    <fullName>Semester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Semester</label>
    <referenceTo>Semester__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>