unpackaged/main/default/objects/Case/fields/So_that__c.field-meta.xml
<CustomField>
    <fullName>So_that__c</fullName>
    <label>So that</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>