unpackaged/main/default/objects/Case/fields/Specific_Record_Info__c.field-meta.xml
<CustomField>
    <fullName>Specific_Record_Info__c</fullName>
    <label>Specific Record Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>