unpackaged/main/default/objects/Case/fields/Steps_to_Replicate__c.field-meta.xml
<CustomField>
    <fullName>Steps_to_Replicate__c</fullName>
    <label>Steps to Replicate</label>
    <length>8000</length>
    <type>LongTextArea</type>
</CustomField>