unpackaged/main/default/objects/Case/fields/Subtype_of_Incident__c.field-meta.xml
<CustomField>
    <fullName>Subtype_of_Incident__c</fullName>
    <label>Subtype of Incident</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_of_Incident__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allergic Reaction</fullName>
            </value>
            <value>
                <fullName>Pre-existing Condition</fullName>
            </value>
            <value>
                <fullName>Medication (lost, refill, change)</fullName>
            </value>
            <value>
                <fullName>Hospitalization</fullName>
            </value>
            <value>
                <fullName>Doctor’s Appt.</fullName>
            </value>
            <value>
                <fullName>Illness</fullName>
            </value>
            <value>
                <fullName>Injury</fullName>
            </value>
            <value>
                <fullName>Lab Testing</fullName>
                <label>Lab/Testing</label>
            </value>
            <value>
                <fullName>Request for Counseling</fullName>
            </value>
            <value>
                <fullName>Mental Health</fullName>
            </value>
            <value>
                <fullName>Student Death</fullName>
            </value>
            <value>
                <fullName>Roommate issue (self report)</fullName>
            </value>
            <value>
                <fullName>Personal issue (self report)</fullName>
            </value>
            <value>
                <fullName>Student of Concern (3rd party report)</fullName>
            </value>
            <value>
                <fullName>Reckless/unsafe behavior</fullName>
            </value>
            <value>
                <fullName>Threatening behavior</fullName>
            </value>
            <value>
                <fullName>Suicidal ideation</fullName>
            </value>
            <value>
                <fullName>Suicide attempt</fullName>
            </value>
            <value>
                <fullName>Homesickness</fullName>
            </value>
            <value>
                <fullName>Freedom of Expression</fullName>
            </value>
            <value>
                <fullName>Religious Expression</fullName>
            </value>
            <value>
                <fullName>Health &amp; Wellbeing</fullName>
            </value>
            <value>
                <fullName>Alcohol and other substances</fullName>
            </value>
            <value>
                <fullName>Assault</fullName>
            </value>
            <value>
                <fullName>Bullying/Harassment/Discrimination</fullName>
            </value>
            <value>
                <fullName>Respect and Inclusion</fullName>
            </value>
            <value>
                <fullName>Sexual Misconduct/Assault/Exploitation</fullName>
            </value>
            <value>
                <fullName>Smoking/Vaping</fullName>
            </value>
            <value>
                <fullName>Surreptitious Recording</fullName>
            </value>
            <value>
                <fullName>Theft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>