unpackaged/main/default/objects/Case/fields/The_Issue__c.field-meta.xml
<CustomField>
    <fullName>The_Issue__c</fullName>
    <label>The Issue</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>