unpackaged/main/default/objects/Case/fields/The_Solution__c.field-meta.xml
<CustomField>
    <fullName>The_Solution__c</fullName>
    <label>The Solution</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>