unpackaged/main/default/objects/Case/fields/Travel_Assist_Case__c.field-meta.xml
<CustomField>
    <fullName>Travel_Assist_Case__c</fullName>
    <label>Travel Assist Case #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>