unpackaged/main/default/objects/Case/fields/Type_of_Incident__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Incident__c</fullName>
    <label>Type of Incident</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Health Concern</fullName>
            </value>
            <value>
                <fullName>Behavior Concern</fullName>
            </value>
            <value>
                <fullName>Code of Conduct Violation</fullName>
            </value>
            <value>
                <fullName>Safety Concern</fullName>
            </value>
            <value>
                <fullName>Housing Concerns</fullName>
            </value>
            <value>
                <fullName>Care Team Concern</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Classroom Accommodation(s)</fullName>
                <isActive>false</isActive>
                <label>Classroom Accommodation(s)</label>
            </value>
            <value>
                <fullName>Housing Accommodation(s)</fullName>
                <isActive>false</isActive>
                <label>Housing Accommodation(s)</label>
            </value>
            <value>
                <fullName>Testing Accommodation(s)</fullName>
                <isActive>false</isActive>
                <label>Testing Accommodation(s)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>