unpackaged/main/default/objects/Case/fields/Want_to_provide_ROI__c.field-meta.xml
<CustomField>
    <fullName>Want_to_provide_ROI__c</fullName>
    <label>Want to provide ROI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>