unpackaged/main/default/objects/Case/fields/What_type_of_follow_needed__c.field-meta.xml
<CustomField>
    <fullName>What_type_of_follow_needed__c</fullName>
    <label>What type of follow-needed</label>
    <length>65536</length>
    <type>LongTextArea</type>
</CustomField>