unpackaged/main/default/objects/Case/fields/When_Emergency_Contact_Notified__c.field-meta.xml
<CustomField>
    <fullName>When_Emergency_Contact_Notified__c</fullName>
    <label>When Emergency Contact Notified</label>
    <length>255</length>
    <type>Text</type>
</CustomField>