unpackaged/main/default/objects/Case/fields/When_Incident_Occured__c.field-meta.xml
<CustomField>
    <fullName>When_Incident_Occured__c</fullName>
    <label>When Incident Occured</label>
    <type>Date</type>
</CustomField>