unpackaged/main/default/objects/Case/fields/Where_did_the_incident_concern_occur__c.field-meta.xml
<CustomField>
    <fullName>Where_did_the_incident_concern_occur__c</fullName>
    <formula>Enrollment_Record__r.Program__r.Location__r.Name</formula>
    <label>Where did the incident/concern occur?</label>
    <type>Text</type>
</CustomField>