unpackaged/main/default/objects/Case/fields/Where_in_Journey__c.field-meta.xml
<CustomField>
    <fullName>Where_in_Journey__c</fullName>
    <label>Where in Journey</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Pre-Departure</fullName>
            </value>
            <value>
                <fullName>In Transit</fullName>
            </value>
            <value>
                <fullName>On-Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>