unpackaged/main/default/objects/Case/fields/Which_FormStack_Form__c.field-meta.xml
<CustomField>
    <fullName>Which_FormStack_Form__c</fullName>
    <label>Which FormStack Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Change the World Application</fullName>
            </value>
            <value>
                <fullName>College Planning Form</fullName>
            </value>
            <value>
                <fullName>Enrollment Form</fullName>
            </value>
            <value>
                <fullName>Financial Appeals Form</fullName>
            </value>
            <value>
                <fullName>Opportunity Grant Application</fullName>
            </value>
            <value>
                <fullName>Student Application (Page 1 and 2)</fullName>
            </value>
            <value>
                <fullName>Submit Your Documents</fullName>
            </value>
            <value>
                <fullName>Withdrawal Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>