unpackaged/main/default/objects/Case/fields/Which_Salesforce_Objects__c.field-meta.xml
<CustomField>
    <fullName>Which_Salesforce_Objects__c</fullName>
    <label>Which Salesforce Objects</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Cohort</fullName>
            </value>
            <value>
                <fullName>College Application</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Dashboard</fullName>
            </value>
            <value>
                <fullName>Enrollment Record</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Program</fullName>
            </value>
            <value>
                <fullName>Report</fullName>
            </value>
            <value>
                <fullName>Semester</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>