unpackaged/main/default/objects/Case/fields/Which_Technology_System__c.field-meta.xml
<CustomField>
    <fullName>Which_Technology_System__c</fullName>
    <label>Which Technology/System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>AirCall</fullName>
            </value>
            <value>
                <fullName>HeyMarket</fullName>
            </value>
            <value>
                <fullName>FormStack</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>