unpackaged/main/default/objects/Case/fields/Who_responded_to_incident__c.field-meta.xml
<CustomField>
    <fullName>Who_responded_to_incident__c</fullName>
    <label>Who responded to incident?</label>
    <length>150</length>
    <type>Text</type>
</CustomField>