unpackaged/main/default/objects/Case/fields/Withdrawal_Intent_Stated_to_Staff__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_Intent_Stated_to_Staff__c</fullName>
    <label>Withdrawal Intent Stated to Staff</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Withdrawal_Intent_Stated_Staff</valueSetName>
    </valueSet>
</CustomField>