unpackaged/main/default/objects/Case/fields/Withdrawal_Reasoning__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_Reasoning__c</fullName>
    <label>Withdrawal Reasoning</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Withdrawal_Reasoning</valueSetName>
    </valueSet>
</CustomField>