unpackaged/main/default/objects/Case/fields/Witness__c.field-meta.xml
<CustomField>
    <fullName>Witness__c</fullName>
    <label>Witness</label>
    <length>255</length>
    <type>Text</type>
</CustomField>