unpackaged/main/default/objects/Case/fields/Your_Department__c.field-meta.xml
<CustomField>
    <fullName>Your_Department__c</fullName>
    <label>Your Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admissions</fullName>
            </value>
            <value>
                <fullName>College Planning</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Student Success</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>