unpackaged/main/default/objects/Case/fields/Your_Question__c.field-meta.xml
<CustomField>
    <fullName>Your_Question__c</fullName>
    <label>Your Question</label>
    <type>TextArea</type>
</CustomField>