unpackaged/main/default/objects/Case/recordTypes/Bugs.recordType-meta.xml
<RecordType>
    <fullName>Bugs</fullName>
    <active>true</active>
    <businessProcess>Technology Issues</businessProcess>
    <label>Bugs</label>
</RecordType>