unpackaged/main/default/objects/Case/recordTypes/Change_the_World_Application.recordType-meta.xml
<RecordType>
    <fullName>Change_the_World_Application</fullName>
    <active>true</active>
    <businessProcess>Standard Cases</businessProcess>
    <label>Change the World Application</label>
</RecordType>