unpackaged/main/default/objects/Case/recordTypes/Financial_Appeal.recordType-meta.xml
<RecordType>
    <fullName>Financial_Appeal</fullName>
    <active>true</active>
    <businessProcess>Financial Appeal</businessProcess>
    <label>Financial Appeal</label>
</RecordType>