unpackaged/main/default/objects/Case/recordTypes/New_Hire_Request.recordType-meta.xml
<RecordType>
    <fullName>New_Hire_Request</fullName>
    <active>true</active>
    <businessProcess>Technology Issues</businessProcess>
    <label>New Hire Request</label>
</RecordType>