unpackaged/main/default/objects/Case/recordTypes/Opportunity_Grant_Applications.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_Grant_Applications</fullName>
    <active>true</active>
    <businessProcess>Standard Cases</businessProcess>
    <label>Opportunity Grant Applications</label>
</RecordType>