unpackaged/main/default/objects/Case/recordTypes/Revenue_Ops_Question.recordType-meta.xml
<RecordType>
    <fullName>Revenue_Ops_Question</fullName>
    <active>true</active>
    <businessProcess>Technology Questions</businessProcess>
    <label>Revenue Ops Question</label>
</RecordType>