unpackaged/main/default/objects/Case/recordTypes/Second_Semester_Deposit.recordType-meta.xml
<RecordType>
    <fullName>Second_Semester_Deposit</fullName>
    <active>true</active>
    <businessProcess>Second Semester Deposit</businessProcess>
    <description>This record type is used for the Second Semester Deposit process.</description>
    <label>Second Semester Deposit</label>
</RecordType>