unpackaged/main/default/objects/Case/recordTypes/Student_Concern.recordType-meta.xml
<RecordType>
    <fullName>Student_Concern</fullName>
    <active>true</active>
    <businessProcess>Student Concern</businessProcess>
    <description>Used for Cases created through the Student Concern Portal</description>
    <label>Student Concern</label>
</RecordType>