unpackaged/main/default/objects/Case/recordTypes/Withdrawal_Request.recordType-meta.xml
<RecordType>
    <fullName>Withdrawal_Request</fullName>
    <active>true</active>
    <businessProcess>Withdrawal Request</businessProcess>
    <label>Withdrawal Request</label>
</RecordType>