unpackaged/main/default/objects/Case/listViews/Admissions_Deposits_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Admissions_Deposits_Queue_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Admissions Deposits Queue</label>
    <queue>Admissions_Deposits_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>