unpackaged/main/default/objects/Case/listViews/Admissions_Feature_Request_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Admissions_Feature_Request_Queue_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed,Completed,Resolved</value>
    </filters>
    <label>Admissions Feature Request Queue</label>
    <queue>Admissions_Feature_Request_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>